@@ -195,6 +195,20 @@ LRESULT CMainMDIFrame::OnNotify(WPARAM wParam, LPARAM lParam)
 	return CMDIFrame::OnNotify(wParam, lParam);
 }
 
+void CMainMDIFrame::SetupMenuIcons()
+{
+	// Load the default set of menu icons from the toolbar
+	CFrame::SetupMenuIcons();
+
+	// Add some extra icons for menu items
+	AddMenuIcon(IDM_FILE_NEWVIEW, GetApp().LoadIcon(IDI_VIEW));
+	AddMenuIcon(IDM_FILE_NEWRECT, GetApp().LoadIcon(IDI_RECT));
+	AddMenuIcon(IDM_FILE_NEWMAX, GetApp().LoadIcon(IDI_MAX));
+	AddMenuIcon(IDM_FILE_NEWTEXT, GetApp().LoadIcon(IDI_TEXT));
+	AddMenuIcon(IDM_FILE_NEWLIST, GetApp().LoadIcon(IDI_FILES));
+	AddMenuIcon(IDM_FILE_NEWTREE, GetApp().LoadIcon(IDI_CLASSES));
+}
+
 void CMainMDIFrame::SetupToolBar()
 {
 	// Define the resource IDs for the toolbar
@@ -216,13 +230,7 @@ void CMainMDIFrame::SetupToolBar()
 	// Use larger buttons with seperate imagelists for normal, hot and disabled buttons.
 	SetToolBarImages(RGB(192,192,192), IDB_TOOLBAR_NORM, IDB_TOOLBAR_HOT, IDB_TOOLBAR_DIS);
 
-	// Add some extra icons for menu items
-	AddMenuIcon(IDM_FILE_NEWVIEW, GetApp().LoadIcon(IDI_VIEW));
-	AddMenuIcon(IDM_FILE_NEWRECT, GetApp().LoadIcon(IDI_RECT));
-	AddMenuIcon(IDM_FILE_NEWMAX, GetApp().LoadIcon(IDI_MAX));
-	AddMenuIcon(IDM_FILE_NEWTEXT, GetApp().LoadIcon(IDI_TEXT));
-	AddMenuIcon(IDM_FILE_NEWLIST, GetApp().LoadIcon(IDI_FILES));
-	AddMenuIcon(IDM_FILE_NEWTREE, GetApp().LoadIcon(IDI_CLASSES));
+
 
 	// Configure the "New" toolbar button to bring up a menu
 	// Setting this style requires comctl32.dll version 4.72 or later
